--- a/appips/templates/listar_usuarios.html
+++ b/appips/templates/listar_usuarios.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %}
-{% load static %}
+{% extends 'base.html' %}
 
 {% block content %}
 <h1>Buscar y Listar Usuarios</h1>
@@ -57,7 +56,7 @@
 
 <!-- Mensaje flotante -->
 <div id="mensaje-flotante"></div>
-{% endblock %}
+
 
 <script>
     // Script para manejar creación de registros
@@ -90,3 +89,4 @@
         });
     });
 </script>
+{% endblock %}
