--- a/appips/templates/base.html
+++ b/appips/templates/base.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% block title %}Mi Proyecto{% endblock %}</title>
+  <title>{% block title %}IPS{% endblock %}</title>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
+
   
 </head>
 <body>
@@ -12,7 +15,7 @@
   </aside>
   <main class="content-wrapper">
     {% block content %}
-    <!-- Aquí irá el contenido específico de cada página -->
+    <!-- contenido específico de cada página -->
     {% endblock %}
   </main>
 </body>
